api for sending and verifying otp

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mapbox-gl-multitouch": "^1.0.3",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.26",
+    "mongoose": "^6.0.9",
     "object.entries": "^1.1.2",
     "object.values": "^1.1.1",
     "passport": "^0.4.1",
@@ -65,6 +66,7 @@
     "sharetribe-scripts": "5.0.1",
     "smoothscroll-polyfill": "^0.4.0",
     "source-map-support": "^0.5.9",
+    "twilio": "^3.68.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
@@ -107,7 +109,7 @@
     "test-ci": "yarn run test-server --runInBand && sharetribe-scripts test --runInBand",
     "eject": "sharetribe-scripts eject",
     "start": "node --icu-data-dir=node_modules/full-icu server/index.js",
-    "dev-server": "set NODE_ENV=development PORT=4000 REACT_APP_CANONICAL_ROOT_URL=http://localhost:4000&&yarn run build&&nodemon --watch server server/index.js",
+    "dev-server": "export NODE_ENV=development PORT=4000 REACT_APP_CANONICAL_ROOT_URL=http://localhost:4000&&yarn run build&&nodemon --watch server server/index.js",
     "test-server": "jest ./server/**/*.test.js",
     "heroku-postbuild": "yarn run build",
     "timezones": "node scripts/parse-iana-timezones.js",
@@ -125,11 +127,9 @@
       "last 1 safari version"
     ]
   },
-
-   "engines": {
+  "engines": {
     "node": "^12.19.0 || >= 14.15.0"
   },
-
   "prettier": {
     "singleQuote": true,
     "trailingComma": "es5",
