--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "array-includes": "^3.1.1",
     "array.prototype.find": "^2.1.1",
     "autosize": "^4.0.0",
+    "axios": "^0.22.0",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
@@ -56,8 +57,10 @@
     "react-helmet-async": "^1.0.6",
     "react-intl": "^3.1.13",
     "react-moment-proptypes": "^1.6.0",
+    "react-phone-number-input": "^3.1.31",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-select": "^5.1.0",
     "react-with-direction": "^1.3.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -110,6 +113,7 @@
     "eject": "sharetribe-scripts eject",
     "start": "node --icu-data-dir=node_modules/full-icu server/index.js",
     "dev-server": "export NODE_ENV=development PORT=4000 REACT_APP_CANONICAL_ROOT_URL=http://localhost:4000&&yarn run build&&nodemon --watch server server/index.js",
+    "dev-server-win": "set NODE_ENV=development PORT=4000 REACT_APP_CANONICAL_ROOT_URL=http://localhost:4000&&yarn run build&&nodemon --watch server server/index.js",
     "test-server": "jest ./server/**/*.test.js",
     "heroku-postbuild": "yarn run build",
     "timezones": "node scripts/parse-iana-timezones.js",
