--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-final-form": "^6.5.1",
     "react-final-form-arrays": "^3.1.2",
     "react-helmet-async": "^1.0.6",
+    "react-icons": "^4.3.1",
     "react-intl": "^3.1.13",
     "react-moment-proptypes": "^1.6.0",
     "react-phone-input-2": "^2.14.0",
