auto listing creation after signup done

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "helmet": "^4.0.0",
     "intl-pluralrules": "^1.0.3",
     "jose": "3.11.4",
+    "js-money": "^0.6.3",
     "jstimezonedetect": "^1.0.7",
     "lodash": "^4.17.21",
     "mapbox-gl-multitouch": "^1.0.3",
@@ -66,7 +67,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "seedrandom": "^3.0.5",
-    "sharetribe-flex-sdk": "1.13.0",
+    "sharetribe-flex-sdk": "^1.15.0",
     "sharetribe-scripts": "5.0.1",
     "smoothscroll-polyfill": "^0.4.0",
     "source-map-support": "^0.5.9",
