--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.22.0",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.18.3",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -51,6 +52,7 @@
     "query-string": "^6.13.1",
     "raf": "^3.4.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.1.2",
     "react-dates": "^21.3.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
