--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "intl-pluralrules": "^1.0.3",
     "jose": "3.11.4",
     "js-money": "^0.6.3",
+    "jsonwebtoken": "^8.5.1",
     "jstimezonedetect": "^1.0.7",
     "lodash": "^4.17.21",
     "mapbox-gl-multitouch": "^1.0.3",
