--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-icons": "^4.3.1",
     "react-intl": "^3.1.13",
     "react-moment-proptypes": "^1.6.0",
+    "react-paginate": "^8.1.0",
     "react-phone-input-2": "^2.14.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
