--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^8.5.1",
     "jstimezonedetect": "^1.0.7",
     "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
     "mapbox-gl-multitouch": "^1.0.3",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.26",
