--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "axios": "^0.22.0",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.18.3",
-    "bootstrap": "^5.1.3",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -38,6 +37,7 @@
     "js-money": "^0.6.3",
     "jstimezonedetect": "^1.0.7",
     "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
     "mapbox-gl-multitouch": "^1.0.3",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.26",
@@ -52,7 +52,6 @@
     "query-string": "^6.13.1",
     "raf": "^3.4.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^2.1.2",
     "react-dates": "^21.3.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
