--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
     ]
   },
   "engines": {
-    "node": "17.4.x"
+    "node": "^12.19.0 || <= 17.4.x"
   },
   "prettier": {
     "singleQuote": true,
