--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
   "resolutions": {
     "react-dates/lodash": "^4.17.21",
     "react-test-renderer": "^16.13.1",
-    "serialize-javascript": "^2.1.1"
+    "serialize-javascript": "^2.1.1",
+    "react-error-overlay": "6.0.9"
   },
   "nodemonConfig": {
     "execMap": {
