--- a/package.json
+++ b/package.json
@@ -114,8 +114,8 @@
     "clean": "rm -rf build/*",
     "config": "node scripts/config.js",
     "config-check": "node scripts/config.js --check",
-    "dev-frontend": "sharetribe-scripts start",
-    "dev-backend": "nodemon server/apiServer.js",
+    "dev-frontend": "set PORT=3000 && sharetribe-scripts start",
+    "dev-backend": "nodemon server/index.js",
     "dev-win": "yarn run config-check&&set NODE_ENV=development REACT_APP_DEV_API_SERVER_PORT=3500&&concurrently --kill-others \"yarn run dev-frontend\" \"yarn run dev-backend\"",
     "dev": "yarn run config-check&&export NODE_ENV=development REACT_APP_DEV_API_SERVER_PORT=3500&&concurrently --kill-others \"yarn run dev-frontend\" \"yarn run dev-backend\"",
     "build": "yarn build-web&&yarn build-server",
