--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "array-includes": "^3.1.1",
     "array.prototype.find": "^2.1.1",
     "autosize": "^4.0.0",
+    "aws-sdk": "^2.1084.0",
     "axios": "^0.22.0",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.18.3",
