--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.26",
     "mongoose": "^6.0.9",
+    "msal": "^1.4.16",
     "object.entries": "^1.1.2",
     "object.values": "^1.1.1",
     "passport": "^0.4.1",
