--- a/package.json
+++ b/package.json
@@ -121,8 +121,8 @@
     "dev-win": "yarn run config-check&&set NODE_ENV=development REACT_APP_DEV_API_SERVER_PORT=3500&&concurrently --kill-others \"yarn run dev-frontend\" \"yarn run dev-backend\"",
     "dev": "yarn run config-check&&export NODE_ENV=development REACT_APP_DEV_API_SERVER_PORT=3500&&concurrently --kill-others \"yarn run dev-frontend\" \"yarn run dev-backend\"",
     "build": "yarn build-web&&yarn build-server",
-    "build-web": "sharetribe-scripts build --max_old_space_size=4096",
-    "build-server": "sharetribe-scripts build-server --max_old_space_size=4096",
+    "build-web": "sharetribe-scripts build",
+    "build-server": "sharetribe-scripts build-server",
     "format": "prettier --write '**/*.{js,css}'",
     "format-ci": "prettier --list-different '**/*.{js,css}'",
     "format-docs": "prettier --write '**/*.md'",
