--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@mui/styled-engine-sc": "^5.4.2",
+    "@sendgrid/mail": "^7.6.2",
     "@sentry/browser": "5.20.1",
     "@sentry/node": "5.20.1",
     "array-includes": "^3.1.1",
